<resources>
    <string name="app_name">PawTrack</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="btn_set_reminder">Set Reminder</string>
    <string name="btn_open_map">Open Map</string>
    <string name="string_enter_title">Enter title</string>
    <string name="string_forgot_password">Forgot\nPassword?</string>
    <string name="string_enter_email_hint">Enter the email address assocciated with your account\n\nAnd we will send you an email containing your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="btn_remind_password">Remind my password</string>
    <string name="string_summary">Summary</string>
    <string name="string_routes">Routes</string>
    <string name="string_yearly_review">Yearly Review</string>
    <string name="string_your_pets_activity">Your Pets Activity</string>
    <string name="string_calories_burned">Calories Burned</string>
    <string name="string_steps">Steps</string>
    <string name="string_distance">Distance</string>
    <string name="string_move">Move</string>
    <string name="string_your_pets_route">Your Pets Route</string>
    <string name="string_welcome_back">Welcome\nBack</string>
    <string name="string_email_or_username">Username</string>
    <string name="string_password">Password</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="string_dont_have_an_account">Don\'t have an account?</string>
    <string name="btn_sign_up">Sign up!</string>
    <string name="string_register">Register</string>
    <string name="string_username">Username</string>
    <string name="string_email">Email</string>
    <string name="btn_sign_up_2">Sign up</string>
    <string name="string_this_weeks_activity">This week\'s Activity</string>
    <string name="string_tracker_map">Tracker map</string>
    <string name="string_sun">SUN</string>
    <string name="string_mon">MON</string>
    <string name="string_tue">TUE</string>
    <string name="string_wed">WED</string>
    <string name="string_thu">THU</string>
    <string name="string_fri">FRI</string>
    <string name="string_sat">SAT</string>
    <string name="string_your_pets_activity_on">Your Pets\' Activity this week</string>
    <string name="string_today">Today</string>
    <string name="string_sunday">Sunday</string>
    <string name="string_monday">Monday</string>
    <string name="string_tuesday">Tuesday</string>
    <string name="string_wednesday">Wednesday</string>
    <string name="string_thursday">Thursday</string>
    <string name="string_friday">Friday</string>
    <string name="string_saturday">Saturday</string>
    <string name="string_subscription">Subscription</string>
    <string name="string_unlock_more_features">Unlock More Features!</string>
    <string name="string_health_advice_for_your_pet">Health advice for  your pet, meal plan and AD removal.</string>
    <string name="string_50_percent_off">50% OFF</string>
    <string name="string_3_months">3 MONTHS</string>
    <string name="string_6_months">6 MONTHS</string>
    <string name="string_4_99_a_month">$ 4.99 /month</string>
    <string name="string_2_50_a_month">$ 2.50 /month</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="string_14_99_dollars">$ 14.99</string>
    <string name="nav_home">Home</string>
    <string name="nav_track">Tracking</string>
    <string name="nav_stat">Statistics</string>
    <string name="nav_map">Map</string>
    <string name="nav_sub">Subscription</string>
    <string name="map_parks">Parks</string>
    <string name="map_vets">Vets</string>
    <string name="map_shops">Shops</string>
    <string name="map_start">Start</string>
    <string name="map_stop">Stop</string>
    <string name="string_pet_name">Pet name</string>
    <string name="string_pet_name_label">Name</string>
    <string name="string_pet_activity_label">Activity category</string>
    <string name="string_pet_tracker_status">Tracker status</string>
    <string name="string_pet_trackID_label">Track ID</string>
    <string name="string_create">Create</string>
    <string name="string_nickname">Nickname</string>
    <string name="string_email_example">nickname@email.com</string>
    <string name="string_created_label">Created:</string>
    <string name="string_date_example">2024/03/25</string>
    <string name="string_premium_label">Premium:</string>
    <string name="string_billings">BILLINGS</string>
    <string name="string_account_settings">ACCOUNT SETTINGS</string>
    <string name="string_account_preferences">PREFERENCES</string>
    <string name="string_log_out">LOG OUT</string>
    <string name="reminder_name_hint">Name of reminder</string>
    <string name="repeat_reminder_label">Repeat</string>
    <string name="add_reminder_button">Add</string>
    <string name="save_reminder_button">Save</string>
    <!-- spinner items -->
    <string name="spinner_prompt">Choose your pets activity level</string>
    <string-array name="spinner_items">
        <item>Low Activity</item>
        <item>Medium Activity</item>
        <item>High Activity</item>
    </string-array>
    <string name="string_pet_image">Pet image</string>
    <string name="string_edit">Edit</string>
    <string name="string_delete_account">Delete account</string>
    <string name="string_change_email">Change email</string>
    <string name="string_change_password">Change password</string>
    <string name="string_enter_new_email">Enter your new email</string>
    <string name="string_change_email_hint">Enter your current email, new email and password to change your email</string>
    <string name="string_enter_new_password">Enter your new password</string>
    <string name="string_change_password_hint">To change your password enter your current and new password</string>
    <string name="btn_start_tracking">Start tracking</string>
    <string name="btn_stop_tracking">Stop tracking</string>
    <string name="string_tracking_label">Tracking</string>
    <string name="string_recent_activities">Recent activities</string>
    <string name="btn_show_more">Show more</string>
    <string name="string_about_description_label">Project description</string>
    <string name="string_about_description">The goal of the project is to create a mobile app and a collar connected to it, with the help of which the owners will be able to monitor the physical activity of their dog.</string>
    <string name="string_about_title">Product development project (PR00B251)\nKaunas University of Technology</string>
    <string name="string_about_authors_label">Authors</string>
    <string name="string_about_authors">Simonas Radžius\nPatricija Babenskaitė\nAugustė Eigelytė\nDovydas Katinas\nUgnius Rinkevičius\nElijus Žekonis</string>
    <string name="string_about">About</string>
    <string name="string_active_time">Activity time</string>
    <string name="string_Message">Message</string>
    <string name="string_Time">Time</string>
    <string name="string_Repeat">Repeat</string>
    <string name="string_All_routes">All routes</string>
    <string name="string_Language">Language</string>
    <string name="string_Dark_theme">Dark theme</string>
    <string name="string_Settings">Settings</string>
    <string name="string_About">About</string>
    <string name="string_Review_of">Review of</string>
    <string name="string_Distance_Chart">Distance Chart</string>
    <string name="string_Active_days_Chart">Active days Chart</string>
    <string name="string_Calories_burned_Chart">Calories burned Chart</string>
    <string name="switch_tracking_label">Tracking type (manual/automatic)</string>
</resources>


