<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ececec">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_arrow_back_24"
                android:drawableTint="@color/app_theme"
                android:textSize="30sp"
                android:paddingStart="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:clickable="false"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_top_background" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/default_profile_picture" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_nickname"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_email_example"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <LinearLayout
                android:id="@+id/Layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintEnd_toEndOf="@id/textView2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_created_label" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_date_example"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/Layout1"
                app:layout_constraintStart_toStartOf="@id/Layout1"
                app:layout_constraintEnd_toEndOf="@id/Layout1">
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_premium_label"/>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_date_example"
                    android:textColor="#f54242"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Layout2">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_background_1"
                    android:drawableStart="@drawable/ic_2"
                    android:drawablePadding="20dp"
                    android:paddingStart="28dp"
                    android:text="@string/string_billings"
                    android:textAlignment="viewStart" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_background_1"
                    android:drawableStart="@drawable/ic_3"
                    android:drawablePadding="20dp"
                    android:paddingStart="28dp"
                    android:text="@string/string_account_settings"
                    android:textAlignment="viewStart" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_background_1"
                    android:drawableStart="@drawable/ic_1"
                    android:drawablePadding="20dp"
                    android:paddingStart="28dp"
                    android:text="@string/string_account_preferences"
                    android:textAlignment="viewStart" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_background_1"
                    android:text="@string/string_log_out"
                    android:textColor="#D80202" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>