<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="340dp"
        android:background="@drawable/rounded_button_50"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_arrow_back_45"
        android:drawableTint="@color/app_theme"
        android:textSize="30sp"
        android:paddingStart="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_about_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/textViewLanguageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_about_description_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_about_description"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/AuthorsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_about_authors_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_about_authors"
                android:layout_marginBottom="30dp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/string_about_title"
                app:srcCompat="@drawable/app_logo" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
