<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="426dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_background_text" />


    <androidx.cardview.widget.CardView
        android:layout_width="366dp"

        android:layout_height="217dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_background_text">

        <ImageView
            android:id="@+id/PetPhotoImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_pet_picture" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:text="@string/string_pet_name"
        android:textColor="#000000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/PetNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="330dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="370dp"
        android:text="@string/string_your_pets_activity"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/PetActivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="400dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/trackIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="440dp"
        android:text="@string/string_pet_trackID_label"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/PetTracketText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="470dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="16sp" />
</FrameLayout>
